tests/spec/parse/snapshots/comparison_args_are_not_type_args.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { take(a < b, c > d); }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Call {
                        expression: Identifier {
                            value: "take",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 13,
                                byte_length: 4,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Binary {
                                operator: LessThan,
                                left: Identifier {
                                    value: "a",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 18,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                right: Identifier {
                                    value: "b",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 22,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 18,
                                    byte_length: 5,
                                },
                            },
                            Binary {
                                operator: GreaterThan,
                                left: Identifier {
                                    value: "c",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 25,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                right: Identifier {
                                    value: "d",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 29,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 25,
                                    byte_length: 5,
                                },
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 18,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 23,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 33,
        },
    },
]
