tests/spec/parse/snapshots/complex_field_and_index_chain.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let result = obj.field[i].method().nested.value; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: DotAccess {
                            expression: DotAccess {
                                expression: Call {
                                    expression: DotAccess {
                                        expression: IndexedAccess {
                                            expression: DotAccess {
                                                expression: Identifier {
                                                    value: "obj",
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 26,
                                                        byte_length: 3,
                                                    },
                                                    resolution: Unresolved,
                                                },
                                                member: "field",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 26,
                                                    byte_length: 9,
                                                },
                                                resolution: Unresolved,
                                            },
                                            index: Identifier {
                                                value: "i",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 36,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 35,
                                                byte_length: 3,
                                            },
                                            from_colon_syntax: false,
                                        },
                                        member: "method",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 35,
                                            byte_length: 10,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 35,
                                        byte_length: 12,
                                    },
                                    call_kind: Unresolved,
                                },
                                member: "nested",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 35,
                                    byte_length: 19,
                                },
                                resolution: Unresolved,
                            },
                            member: "value",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 35,
                                byte_length: 25,
                            },
                            resolution: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 47,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 52,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 62,
        },
    },
]
