tests/spec/parse/snapshots/compound_assignment.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let mut x = 10;
    x += 5;
    x -= 3;
    x *= 2;
    x /= 4;
    x %= 3;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                            mut_span: Some(
                                Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 3,
                                },
                            ),
                        },
                        value: Literal {
                            literal: Integer {
                                value: 10,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 2,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 14,
                        },
                    },
                    Assignment {
                        target: Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 33,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        value: Literal {
                            literal: Integer {
                                value: 5,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 38,
                                byte_length: 1,
                            },
                        },
                        compound_operator: Some(
                            Addition,
                        ),
                        span: Span {
                            file_id: 0,
                            byte_offset: 33,
                            byte_length: 6,
                        },
                    },
                    Assignment {
                        target: Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 43,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        value: Literal {
                            literal: Integer {
                                value: 3,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 48,
                                byte_length: 1,
                            },
                        },
                        compound_operator: Some(
                            Subtraction,
                        ),
                        span: Span {
                            file_id: 0,
                            byte_offset: 43,
                            byte_length: 6,
                        },
                    },
                    Assignment {
                        target: Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 53,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        value: Literal {
                            literal: Integer {
                                value: 2,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 58,
                                byte_length: 1,
                            },
                        },
                        compound_operator: Some(
                            Multiplication,
                        ),
                        span: Span {
                            file_id: 0,
                            byte_offset: 53,
                            byte_length: 6,
                        },
                    },
                    Assignment {
                        target: Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 63,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        value: Literal {
                            literal: Integer {
                                value: 4,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 68,
                                byte_length: 1,
                            },
                        },
                        compound_operator: Some(
                            Division,
                        ),
                        span: Span {
                            file_id: 0,
                            byte_offset: 63,
                            byte_length: 6,
                        },
                    },
                    Assignment {
                        target: Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 73,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        value: Literal {
                            literal: Integer {
                                value: 3,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 78,
                                byte_length: 1,
                            },
                        },
                        compound_operator: Some(
                            Remainder,
                        ),
                        span: Span {
                            file_id: 0,
                            byte_offset: 73,
                            byte_length: 6,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 71,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 81,
        },
    },
]
