tests/spec/parse/snapshots/const_basic.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  const MAX_RETRIES = 5;
---
[
    Const {
        doc: None,
        identifier: "MAX_RETRIES",
        identifier_span: Span {
            file_id: 0,
            byte_offset: 7,
            byte_length: 11,
        },
        annotation: None,
        expression: Value(
            Literal {
                literal: Integer {
                    value: 5,
                    text: None,
                },
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 21,
                    byte_length: 1,
                },
            },
        ),
        visibility: Private,
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 21,
        },
    },
]
