tests/spec/parse/snapshots/const_with_type.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  const PI: float64 = 3.14159;
---
[
    Const {
        doc: None,
        identifier: "PI",
        identifier_span: Span {
            file_id: 0,
            byte_offset: 7,
            byte_length: 2,
        },
        annotation: Some(
            Constructor {
                name: "float64",
                params: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 7,
                },
            },
        ),
        expression: Value(
            Literal {
                literal: Float {
                    value: 3.14159,
                    text: None,
                },
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 21,
                    byte_length: 7,
                },
            },
        ),
        visibility: Private,
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 27,
        },
    },
]
